codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__multiple_status_line_rows_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                          "
"──────────────────────────────────────────────────────────"
"› Ask Codex to do anything                                "
"──────────────────────────────────────────────────────────"
"   Ready                                                 "
"   Context 0% used · Context 100% left                   "
