codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__multiple_status_lines_with_session_title.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: rendered
---
"                                                          "
"────────────────────────────────Integrated transcript UX──"
"› Ask Codex to do anything                                "
"──────────────────────────────────────────────────────────"
"  Ready                                                   "
"  Context 0% used · Context 100% left                     "
